[package]
resolver = "2"
name = "frontend"
edition = "2021"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.4.6", features = ["csr", "nightly"] }
leptos-use = "0.6.0"
leptos_router = { version = "0.4.8", features = ["csr", "nightly"] }
